--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,8 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+#font pango:monospace 8, FontAwesome, 10
+font pango: M+ 1m, FontAwesome, 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -160,17 +161,35 @@ bindsym Print exec scrot -e 'mv $f ~/Pictures'
 # scrot & gimp - select window or rectangle
 bindsym --release $mod+Print exec scrot -s -e 'mv $f ~/Pictures'
 
-bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute
-bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute
-bindsym XF86AudioMute exec amixer -q -D pulse sset Master toggle
+#bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute
+#bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute
+#bindsym XF86AudioMute exec amixer -q -D pulse sset Master toggle
+bindsym XF86AudioRaiseVolume exec amixer -q sset 'Master' 5%+
+bindsym XF86AudioLowerVolume exec amixer -q sset 'Master' 5%-
+bindsym XF86AudioMute exec amixer -q sset 'Master' toggle
 
 bindsym $mod+z exec sh ~/.screenlayout/dockbite.sh
 
-exec --no-startup-id feh --bg-scale ~/Pictures/wallhaven-369423.jpg
+exec --no-startup-id feh --bg-scale ~/Pictures/wallpaper.jpg
 exec --no-startup-id compton
 exec --no-startup-id nm-applet
 
-bindsym XF86MonBrightnessUp exec --no-startup-id ~/brightness.sh +10
-bindsym XF86MonBrightnessDown exec --no-startup-id ~/brightness.sh -10
+bindsym XF86MonBrightnessUp exec --no-startup-id ~/.scripts/brightness.sh +10
+bindsym XF86MonBrightnessDown exec --no-startup-id ~/.scripts/brightness.sh -10
 
-bindsym $mod+shift+x exec sh ~/.bin/scripts/lock.sh
+#bindsym $mod+shift+x exec sh ~/.scripts/lock.sh
+
+set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
+mode "$mode_system" {
+    bindsym l exec --no-startup-id ~/.scripts/i3exit.sh lock, mode "default"
+    bindsym e exec --no-startup-id ~/.scripts/i3exit.sh logout, mode "default"
+    bindsym s exec --no-startup-id ~/.scripts/i3exit.sh suspend, mode "default"
+    bindsym h exec --no-startup-id ~/.scripts/i3exit.sh hibernate, mode "default"
+    bindsym r exec --no-startup-id ~/.scripts/i3exit.sh reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id ~/.scripts/i3exit.sh shutdown, mode "default"
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+Delete mode "$mode_system"
